compiler/tests/fixtures/compile_errors/bad_map5.fe
contract Foo:
  x: map<map<u8, u8>, address>
